--- a/desktop.css
+++ b/desktop.css
@@ -75,7 +75,7 @@ nav#sidebar a:visited {
 
 nav#sidebar a:hover {
 	color: #F0E4FF;
-	background-color: #952F38;
+	background-color: #2b348c;
 }
 
 main {
@@ -105,8 +105,6 @@ li.portfolio_item {
 
 	flex-grow: 1;
 	flex-shrink: 1;
-
-	background-color: #382F95; 
 }
 
 li.portfolio_item div {
@@ -125,7 +123,7 @@ li.portfolio_item a {
 }
 
 li.portfolio_item a div:hover {
-	background-color: #952F38; 
+	background-color: #2b348c; 
 }
 
 li.portfolio_item div h4 {
