Added content to first 2 portfolio items
Penguin Game and SFML Shmup now have webpages with description and video

--- a/desktop.css
+++ b/desktop.css
@@ -84,6 +84,12 @@ main {
 	flex-grow: 1;
 }
 
+main .center {
+	text-align: center;
+	display: block;
+	margin: auto;
+}
+
 main a {
 	color: #9A9AA0;
 
