--- a/desktop.css
+++ b/desktop.css
@@ -1,11 +1,10 @@
 /*	Palette:
-	white 			#F0E4FF
-	grey			#9A9AA0
-	blue (tone 2)	#3B4D58
-	blue (tone 3)	#22262C
-	black 			#0A0F0D
-	red 			#952F38; */
-
+	white (text) 						#F0E4FF
+	grey (text)							#9A9AA0
+	back of main content and sidebar	#22262C
+	black (title bar)		 			#0A0F0D
+	blue (highlighted link) 			#2b348c; */
+	
 html {
 	height: 100%;
 
@@ -48,13 +47,12 @@ h3 {
 	flex-grow: 1;
 
 	display: flex;
-	flex-flow: row;
+	flex-flow: column;
 	
 	background-color: #22262C;
 }
 
 nav#sidebar {
-	flex-basis: 128px;
 	flex-grow: 0;
 	flex-shrink: 0;
 }
@@ -65,6 +63,7 @@ nav#sidebar a {
 	display: block;
 
 	text-decoration: none;
+	text-align: center;
 
 	color: #F0E4FF;
 }
@@ -98,6 +97,20 @@ main a {
 
 main a:hover {
 	color: #F0E4FF;
+}
+
+@media only screen and (min-width: 800px) {
+
+	#middle {
+		flex-flow: row;
+	}
+
+	nav#sidebar {
+		flex-basis: 128px;
+		flex-grow: 0;
+		flex-shrink: 0;
+	}
+	
 }
 
 ul#portfolio_list {
