Added JS Sokoban from WAD assignment
Added the images, html and js from the assignment.
Modified the portfolio so there's a link to the page, as well as the css

--- a/desktop.css
+++ b/desktop.css
@@ -203,3 +203,11 @@ footer {
 
 	background-color: #0A0F0D;
 }
+
+canvas#game {
+	width: 768px;
+	height: 576px;
+
+	image-rendering: pixelated; /* Chrome */
+	image-rendering: -moz-crisp-edges; /* Firefox */
+}
